# calac

./: .gitignore  CODE_GUIDELINES.md  README.md  pyproject.toml  try.py
smartcalc/: __init__.py  api.py  astnodes.py  cli.py  constants.py  errors.py  evaluator.py  lexer.py  parser.py  plotting.py  precedence.py  simplify.py  tokens.py
smartcalc.egg-info/: PKG-INFO  SOURCES.txt
smartcalc_web/: __init__.py  app.py
tests/: 01_test.calc  sample.calc  test_core.py  test_functions.py  test_plotting.py  test_simplify.py  test_web_app.py
