[project]
name = "smartcalc"
version = "0.1.0"
description = "Safe expression parser/evaluator with lexer+Pratt parser"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4,<0.5",
    "numpy>=1.24,<2.0",
    "plotly>=5.20,<6.0",
    "kaleido>=0.2,<0.3",
]

[project.scripts]
smartcalc = "smartcalc.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
